= Changelog

== 0.8.2-dev - unreleased

== 0.8.1 - 2025-06-07

* Kartenterminal: Firmwareversion ins Formular mit aufgenommen für manuellen 
  Eintrag bei mobilen Kartenterminals
* Tags für die objekt-übergreifende Kennzeichnung
* Fix: Standort bei Karten wird nicht mehr überschrieben, wenn dem Kartenterminal kein Standort zugewiesen ist.

== 0.8.0 - 2025-05-13

* Authentifikation gegen LDAP parallel zur lokalen Datenbank
* Benutzeranlage mit Vorlage aus einem LDAP-Verzeichnisdienst
* Upgrade auf Ruby 3.3

== 0.7.8 - 2025-05-08

* Fix: Der Wechsel einer Karte von einem Slot zu einem anderen (oder auch anderem Kartenterminal) wird jetzt korrekt dargestellt.
* `last_check` für Karten und Terminals (letztes Auffinden über den Konnektor)
* Hintergrundjob für das Aufräumen bei abgelaufenen Acknowledges insbesondere
für Objekte, die aus anderen Gründen nicht mehr aktualisiert werden.
* Reset-Button bei Karten zum Löschen der Zuordnung zum Kartenterminals insbesondere für außer Betrieb genommene Karten.
* Soft delete für Karten: _Löschen_ versteckt die Karte, löscht sie aber nicht vollends aus der Datenbank. Über den Menüeintrag _Gelöschte Karten_ können diese Karten weiter eingesehen werden. Karten, die vor diesem Release gelöscht wurden, sind dauerhaft gelöscht.

== 0.7.7 - 2025-05-04

* Fix: Karten mit abgelaufenen Acknowledges werden wieder korrekt im Dashboard angezeigt
* Suche nach abgelaufenen und nicht mehr benutzten Karten
* IP Mismatch bei Kartenterminals: Anzeige der IPs jetzt auch in der Fehlermeldung

== 0.7.6 - 2025-04-13

* Ruhebildschirm setzen: Feedback bei Fehlern verbessert
* Reboot KoCoBox: Feedback bei SSL-Fehlern, die einen Remote-Reboot verhindern
* Prüfung Kartenterminal, ob Remote-Management-Port für RMI verfügbar ist.
* Update auf Ruby 3.2.7
* Verbindungstest für Konnektor und Kartenterminal separat via Button möglich

== 0.7.5 - 2025-04-05

* internes Refactoring bei Funktionen für unterstützte Kartenterminals