@@ -213,6 +213,18 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
+<h2 id="_0_8_2_dev_unreleased"><a class="anchor" href="#_0_8_2_dev_unreleased"></a>0.8.2-dev - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>ObjectSystemVersion einer Karte. SMC-B, HBA und gSMC-KT mit einer ObjectSystemVersion &lt; 4.4.0 sind RSA only, HBAs dürfen für die QES ab 01.01.2026 nur noch ECC verwenden. Bei nonQES-Verfahren gilt eine Duldung bis Ende 2026.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_0_8_1_2025_06_07"><a class="anchor" href="#_0_8_1_2025_06_07"></a>0.8.1 - 2025-06-07</h2>
 <div class="sectionbody">
 <div class="ulist">
